--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇯🇵 日本-2.42MB/s(Youtube:不良林), server: 85.208.108.60, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-3.26MB/s(Youtube:不良林), server: 167.88.61.50, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-2.14MB/s(Youtube:不良林), server: 85.208.108.59, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-2.85MB/s(Youtube:不良林), server: 85.208.108.59, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: 38.114.114.19, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇯🇵 日本-822.9KB/s(Youtube:不良林), server: 85.208.108.59, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-898.5KB/s(Youtube:不良林), server: 167.88.61.213, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-2.39MB/s(Youtube:不良林), server: 85.208.108.60, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇯🇵 日本-2.64MB/s(Youtube:不良林), server: 85.208.108.59, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 38.68.135.18, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: 38.68.134.85, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 38.68.134.85, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: 38.68.134.85, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-2.48MB/s(Youtube:不良林), server: 38.68.134.85, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-2.37MB/s(Youtube:不良林), server: 38.75.136.102, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-822.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-822.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-822.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-822.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-822.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-822.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.89MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-822.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
 rules:
