--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.61MB/s(Youtube:不良林), server: 38.114.114.19, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-822.9KB/s(Youtube:不良林), server: 85.208.108.59, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-898.5KB/s(Youtube:不良林), server: 167.88.61.213, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-2.39MB/s(Youtube:不良林), server: 85.208.108.60, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇯🇵 日本-2.64MB/s(Youtube:不良林), server: 85.208.108.59, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-1.50MB/s(Youtube:不良林), server: 85.208.108.60, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-2.40MB/s(Youtube:不良林), server: 85.208.108.59, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-3.20MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 38.114.114.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-2.42MB/s(Youtube:不良林), server: 85.208.108.60, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 38.68.135.18, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-2.05MB/s(Youtube:不良林), server: 38.68.134.85, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: 38.68.134.85, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-822.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-822.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-822.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-822.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-822.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-822.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.61MB/s(Youtube:不良林)
-      - 🇯🇵 日本-822.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-898.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
